fixed inpu parameter y overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -557,7 +557,7 @@ section.education-options {
 /* discover */
 
 #discover {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   justify-content: center;
   background-color: #ffffff;
